--- a/dial-mount/dial-mount.ipynb
+++ b/dial-mount/dial-mount.ipynb
@@ -25,7 +25,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3a68b48ff717457297c57dacea4b8a88",
+       "model_id": "d491430f77c44c9b8f181cb34f70a945",
        "version_major": 2,
        "version_minor": 0
       },
@@ -46,7 +46,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The mounting screws are in the right place for the carraige, but the screws for the dial indicator are not remotely compatible with my model.\n",
+    "The mounting screws are in the right place for the carriage, but the screws for the dial indicator are not remotely compatible with my model.\n",
     "\n",
     "This is easily fixed though. Other parts that work with my dial indicator just hold the center bore:\n",
     "\n",
@@ -63,7 +63,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "48cc43ca147f4b62a054291fc3e70a94",
+       "model_id": "cd82cbe9f5ee4be4ac1fc7eca219fee9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -91,7 +91,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "54d6d46fbde6493eb5acbf3022b660d5",
+       "model_id": "70bf3bb4ad1c49e99a7bf23fc4399cf6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -123,7 +123,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e1ff9b1471ce43989a92670e33ea8c0d",
+       "model_id": "bff58bf336b34c83ab179a4338d75e8e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -172,7 +172,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "81f7cc63e6d94a818bb71b86b97ea84e",
+       "model_id": "7a4cfc9011d6431c8d7e2c6734f3c92a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -205,7 +205,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4ee462378b524dda839dbb9e8b90a65c",
+       "model_id": "03d7f1454e1d43f38c5ee1949957d969",
        "version_major": 2,
        "version_minor": 0
       },
@@ -237,7 +237,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "543eb434d68d4bffaf0af1981630029d",
+       "model_id": "dc49d59f4b4d4a54b93d95853c617fac",
        "version_major": 2,
        "version_minor": 0
       },
